# fv3atm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.good_for_coupled  LICENSE.md  README.md  atmos_model.F90  configure  coupler_main.F90  fv3_cap.F90  makefile  module_fcst_grid_comp.F90  module_fv3_config.F90
CCPP_layer/: CMakeLists.txt  makefile
ccpp/: CMakeLists.txt  build_ccpp.sh  set_compilers.sh
ccpp/config/: ccpp_prebuild_config.py
ccpp/data/: CCPP_data.F90  CCPP_typedefs.F90  CMakeLists.txt  GFS_typedefs.F90  GFS_typedefs.F90_old  GFS_typedefs.F90_org  GFS_typedefs.meta_Jun07  GFS_typedefs.meta_old
ccpp/driver/: CCPP_driver.F90  CMakeLists.txt  GFS_diagnostics.F90  GFS_init.F90  GFS_restart.F90  makefile
ccpp/suites/: albatross.xml  alias.json  antbird.xml  auklet.xml  bald_eagle.xml  bluebird.xml  canary.xml  chickadee.xml  condor.xml  crossbill.xml  crow.xml  dotterel.xml  dove.xml  egret.xml  falcon.xml  flamingo.xml  flycatcher.xml  goldfinch.xml  heron.xml  hornbill.xml  hummingbird.xml  ibis.xml  kestrel.xml  kingfisher.xml  loon.xml  lorikeet.xml  magpie.xml  meadowlark.xml  parakeet.xml  pelican.xml  penguin.xml  pigeon.xml  ptarmigan.xml  puffin.xml  raven.xml  sandpiper.xml  shrike.xml  snowy_owl.xml  starling.xml  suite.xsd  (+236 more)
ccpp/suites_not_used/: suite_FV3_CPT_v0.xml  suite_FV3_GFS_2017_csawmg.xml  suite_FV3_GFS_2017_gfdlmp.xml  suite_FV3_GFS_2017_gfdlmp_regional.xml  suite_FV3_GFS_2017_sas.xml  suite_FV3_GFS_2017_shinhong.xml  suite_FV3_GFS_2017_stretched.xml  suite_FV3_GFS_2017_ysu.xml  suite_FV3_GFS_v15.xml  suite_FV3_GFS_v15_gf.xml  suite_FV3_GFS_v15_rasmgshoc.xml  suite_FV3_GFS_v15_thompson.xml  suite_FV3_GFS_v15_thompson_mynn.xml  suite_FV3_GFS_v15p2_no_nsst.xml  suite_FV3_GFS_v15plus.xml  suite_FV3_GFS_v16_coupled.xml  suite_FV3_GFS_v16_coupled_nsstNoahmpUGWPv1.xml  suite_FV3_GFS_v16_coupled_p8.xml  suite_FV3_GFS_v16_couplednsst.xml  suite_FV3_GFS_v16_no_nsst.xml  suite_FV3_GFS_v16_noahmp.xml  suite_FV3_GFSv17alp_cpldnsstrasugwpnoahmp.xml  suite_FV3_GFSv17alp_cpldnsstsasugwpnoahmp.xml  suite_FV3_GFSv17alpha_cpldnsstras_flake.xml  suite_FV3_GFSv17alpha_cpldnsstras_ugwp.xml  suite_FV3_HAFS_v1_thompson.xml  suite_FV3_HAFS_v1_thompson_noahmp.xml  suite_FV3_HAFS_v1_thompson_noahmp_nonsst.xml  suite_FV3_HAFS_v1_thompson_nonsst.xml  suite_FV3_HRRR_flake.xml  suite_FV3_HRRR_gf.xml  suite_FV3_RAP_noah_sfcdiff_unified_ugwp.xml  suite_FV3_RRFS_v1alpha.xml
ci/: CMakeLists.txt  spack.yaml
cpl/: CMakeLists.txt  makefile  module_block_data.F90  module_cap_cpl.F90  module_cplfields.F90  module_cplscalars.F90
gfsphysics/: CMakeLists.txt  makefile
gfsphysics/CCPP_layer/: CCPP_data.F90  CCPP_typedefs.F90
gfsphysics/GFS_layer/: GFS_abstraction_layer.F90  GFS_diagnostics.F90  GFS_driver.F90  GFS_land_perts.F90  GFS_physics_driver.F90  GFS_physics_driver.F90_clean  GFS_radiation_driver.F90  GFS_restart.F90  GFS_typedefs.F90
gfsphysics/physics/: GFS_debug.F90  aer_cloud.F  aerclm_def.f  aerinterp.f90  cires_ugwp_initialize.F90  cires_ugwp_module.F90  cires_ugwp_triggers.F90  cldmacro.F  co2hc.f  cs_conv.F90  cs_conv.f90  dcyc2.f  efield.f  gcm_shoc.f90  gcycle.F90  gcycle.f90  get_prs.f  gfdl_cloud_microphys.F90  gfs_phy_tracer_config.F  gscond.f  gwdps.f  h2oc.f  h2ointerp.f90  iccninterp.f90  idea_cal_advance.f  idea_co2.f  idea_composition.f  idea_dissipation.f  idea_getcoef.f  idea_getno_snoe.f  idea_h2o.f  idea_imf_input.f  idea_interpol_datab.f  idea_io_units.f  idea_ion.f  idea_ion_empirmodels.f  idea_ion_input.f  idea_merge_ipe_to_wam.f  idea_mpi_def.f  idea_o2_o3.f  (+68 more)
io/: CMakeLists.txt  FV3GFS_clm_lake_io.F90  FV3GFS_common_io.F90  FV3GFS_io.F90  FV3GFS_oro_io.F90  FV3GFS_restart_io.F90  FV3GFS_rrfs_sd_io.F90  FV3GFS_sfc_io.F90  clm_lake_io.F90  fv3atm_clm_lake_io.F90  fv3atm_common_io.F90  fv3atm_history_io.F90  fv3atm_oro_io.F90  fv3atm_restart_io.F90  fv3atm_rrfs_sd_io.F90  fv3atm_sfc_io.F90  inline_post.F90  inline_post_stub.F90  makefile  module_fv3_io_def.F90  module_write_internal_state.F90  module_write_nemsio.F90  module_write_netcdf.F90  module_write_netcdf_parallel.F90  module_write_netcdf_parallel_stub.F90  module_write_restart_netcdf.F90  module_wrt_grid_comp.F90  post_fv3.F90  post_gfs.F90  post_gfs_stub.F90  post_nems_routines.F90  post_nems_routines.F90~  post_regional.F90
ipd/: CMakeLists.txt  IPD_CCPP_driver.F90  IPD_driver.F90  IPD_typedefs.F90  makefile
moving_nest/: CMakeLists.txt  bounding_box.F90  fv_moving_nest.F90  fv_moving_nest_main.F90  fv_moving_nest_physics.F90  fv_moving_nest_types.F90  fv_moving_nest_utils.F90  fv_tracker.F90
mpas/: CMakeLists.txt  mpas_cap.F90  ufs_mpas.F90  ufs_mpas_subdriver.F90
namphysics/: CMakeLists.txt  makefile
namphysics/NAM_layer/: NAM_abstraction_layer.F90  NAM_diagnostics.F90  NAM_driver.F90  NAM_radiation_driver.F90  NAM_restart.F90  NAM_typedefs.F90  module_SOLVER_GRID_COMP.F90
namphysics/physics/: gfdl_cloud_microphys.F90  grrad_nmmb.f  mfdeepcnv.f  mfshalcnv.f  module_BL_GFSPBL.F90  module_BL_GFSPBLEDMFHUR.F90  module_BL_GFSPBLHUR.F90  module_BL_MYJPBL.F90  module_CONSTANTS.F90  module_CONTROL.F90  module_CONVECTION.F90  module_CU_BMJ.F90  module_CU_SAS.F90  module_CU_SASHUR.F90  module_CU_SCALE.F90  module_DIAGNOSE.F90  module_GWD.F90  module_KINDS.F90  module_LS_LISS.F90  module_LS_NOAHLSM.F90  module_MICROPHYSICS.F90  module_MP_ETANEW.F90  module_MP_FER_HIRES.F90  module_MP_GFS.F90  module_MP_WSM6.F90  module_RADIATION.F90  module_RA_GFDL.F90  module_RA_RRTM.F90  module_SF_GFDL.F90  (+15 more)
stochastic_physics/: CMakeLists.txt  cellular_automata.f90  compns_stochy.F90  dezouv_stochy.f  dozeuv_stochy.f  epslon_stochy.f  get_lats_node_a_stochy.f  get_ls_node_stochy.f  get_stochy_pattern.F90  gozrineo_stochy.f  initialize_spectral_mod.F90  makefile  pln2eo_stochy.f  plumes.f90  stochastic_physics.F90  stochastic_physics_driver.F90  stochastic_physics_wrapper.F90  stochy_data_mod.F90  stochy_namelist_def.F90  stochy_patterngenerator.F90  update_ca.f90
tests/: CMakeLists.txt  default_vars.sh  rt.conf  rt.sh  rt_fv3.sh  test_fv3_io_def.F90  test_post_nems_routines.F90
(+69 files in other folders)
